--- a/src/layouts/HtmlEjercicios.html
+++ b/src/layouts/HtmlEjercicios.html
@@ -28,28 +28,20 @@
 
       pre {
         margin-left: 1em;
+        color: black;
       }
     </style>
     <title>ELEMENTOS RÁPIDOS</title>
   </head>
   <body>
-    <h1>Interpolar Textos <br />EJERCICIOS</h1>
+    <h1></h1>
     <section id="1">
       <h2 class="subtitulo"></h2>
       <!-- /////////////////////////////////////// -->
       <ol>
         <li class="li">
           <details class="select">
-            <summary>Que muestre si el alumno está aprobado</summary>
-            <ol>
-              <li>Llamarlo desde el app.vue para verlo en pantalla</li>
-              <li>Hace una variable color y darle color al elemento</li>
-            </ol>
-            <pre></pre>
-            <img
-              src="/src/assets/image/front/vue3/interpolar.PNG"
-              class="img1"
-            />
+            <summary></summary>
             <p><br /><br /></p>
           </details>
         </li>
