--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,7 @@ background-color: cadetblue;
   font-size: 1em;
   padding-left: 0.5em;
   border-radius: 0.7em;
+  margin-top: 0.5em;
 }
 
 .cita{
