--- a/src/layouts/HtmlEjercicios.html
+++ b/src/layouts/HtmlEjercicios.html
@@ -8,34 +8,7 @@
       href="/src/assets/image/home/CERVERA.png"
       type="image/x-icon"
     />
-    <style>
-      body {
-        background-color: bisque;
-      }
-      .img {
-        width: 600px;
-        margin: 4em;
-        border: brown double 6px;
-      }
-
-      .li {
-        margin: 0.5em;
-        padding: 0.5em;
-        border: brown solid 1px;
-        width: 65em;
-      }
-
-      .select {
-        font-size: 1.3em;
-        color: brown;
-        background-color: white;
-      }
-
-      pre {
-        margin-left: 1em;
-        color: black;
-      }
-    </style>
+    <link rel="stylesheet" href="../../../style.css" />
     <title>ELEMENTOS RÁPIDOS</title>
   </head>
   <body>
@@ -47,42 +20,60 @@
         <li class="li">
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li class="li">
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li class="li">
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li class="li">
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li class="li">
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
         <li class="li">
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
