--- a/src/style.css
+++ b/src/style.css
@@ -59,3 +59,8 @@ margin-left: 1em;
   cursor: pointer;
   color: brown;
 }
+.subtitulo{
+  font-size: 2.5em;
+  color: brown;
+  margin-left: 1em;
+}
